@@ -11,6 +11,7 @@ use warnings;
 
 # VERSION
 
+use Encode;
 use Fcntl;
 use Rex::Interface::Fs;
 use Rex::Interface::File::Base;
@@ -58,6 +59,10 @@ sub read {
 
 sub write {
   my ( $self, $buf ) = @_;
+
+  $buf = Encode::encode( $self->get_file_write_encoding, $buf )
+    if defined $self->get_file_write_encoding;
+
   $self->{fh}->write($buf);
 }
 
