@@ -8,6 +8,7 @@ Revision history for Rex
  [DOCUMENTATION]
 
  [ENHANCEMENTS]
+ - Add option to control encoding of files written by Rex
 
  [MAJOR]
 
